# TechNet

./: .sops.yaml  Architecture.drawio  README.md  Storages.drawio  default.nix  flake.nix  nixos-install.sh  nixos-update.sh  nixtool-config.json  nixtool.sh  secrets.yaml  update.sh
.claude/: settings.local.json
.github/workflows/: main.yml
0-common/: default.nix  secrets.yaml
0-common/1-system/: 1-hardware-configuration.nix  10-firewall.nix  11-fail2ban.nix  12-zram.nix  13-disk-checking.nix  14-disk-space-monitoring.nix  14-zfs-unlock.nix  2-boot.nix  3-root-drive-disko.nix  4-impermanence.nix  5-software.nix  6-fs-watcher-limit.nix  8-locale.nix  9-certificates.nix  default.nix
1-backup-server/: README.md  default.nix  install.sh  secrets.yaml  update.sh
2-server/: README.md  default.nix  install.sh  reinstall.sh  secrets.yaml  update.sh
3-laptop/: README.md  default.nix  secrets.yaml
5-phone/: README.md  storage.drawio
docs/: 2. Server.md  3. Laptop.md  5. Tech Kit.md  6. Workstation.md
scripts/: flash-sd-card.sh  format-data-drive-server.sh  format-sd-card-phone.sh  install.sh  installer.py  nixtool-config.json  nixtool.py  update.py  update.sh
scripts/nixtool/: install.sh  installer.py  installer2.py  nixtool.py  pyproject.toml  shell.nix
scripts/nixtool/nixtool/: __init__.py  __main__.py  command_runner.py  commands.py  commands2.py  host_selector.py  main.py  options_widget.py  theme.py
secrets/: 0-common.yaml  2-server.yaml  3-laptop.yaml  4-phone.yaml  common.yaml
server/: configuration.nix  default.nix  disk-config.nix  persistence.nix
(+937 files in other folders)
