[project]
name = "technet-installer"
version = "0.1.0"
description = "Unified TUI for NixOS installation and disk formatting"
dependencies = [
    "textual>=0.85.0",
]
requires-python = ">=3.11"

[project.scripts]
technet-installer = "technet_installer.main:run"
nixtool = "nixtool:run"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"